WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
165425
Exit pointer lock when page goes into page cache.
https://bugs.webkit.org/show_bug.cgi?id=165425
Summary
Exit pointer lock when page goes into page cache.
Jeremy Jones
Reported
2016-12-05 15:16:47 PST
Exit pointer lock when page goes into page cache.
Attachments
Patch
(7.64 KB, patch)
2016-12-05 21:16 PST
,
Jeremy Jones
jer.noble
: review+
Details
Formatted Diff
Diff
Patch for landing.
(9.02 KB, patch)
2016-12-07 20:34 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2016-12-05 15:17:18 PST
rdar://problem/29430834
Jeremy Jones
Comment 2
2016-12-05 21:16:43 PST
Created
attachment 296263
[details]
Patch
Jeremy Jones
Comment 3
2016-12-05 21:48:33 PST
***
Bug 164956
has been marked as a duplicate of this bug. ***
Jer Noble
Comment 4
2016-12-06 13:10:33 PST
Comment on
attachment 296263
[details]
Patch r=me, with nit: this patch doesn't have any expected results; you should generate them with run-webkit-tests --reset-results before committing.
Jeremy Jones
Comment 5
2016-12-07 20:34:39 PST
Created
attachment 296476
[details]
Patch for landing.
WebKit Commit Bot
Comment 6
2016-12-07 22:20:25 PST
Comment on
attachment 296476
[details]
Patch for landing. Clearing flags on attachment: 296476 Committed
r209525
: <
http://trac.webkit.org/changeset/209525
>
Alexey Proskuryakov
Comment 7
2017-02-02 16:47:06 PST
Should this bug be closed now?
Chris Dumez
Comment 8
2017-02-22 21:56:32 PST
Comment on
attachment 296476
[details]
Patch for landing. View in context:
https://bugs.webkit.org/attachment.cgi?id=296476&action=review
> Source/WebCore/ChangeLog:9 > + Test: pointer-lock/lock-lost-on-navigation.html
This test does not cover the code change since it does not enable PageCache. Not that PageCache is disabled by default in layout tests unless explicitly enabled via: testRunner.overridePreference("WebKitUsesPageCachePreferenceKey", 1);
Chris Dumez
Comment 9
2017-02-22 21:56:50 PST
(In reply to
comment #8
)
> Comment on
attachment 296476
[details]
> Patch for landing. > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=296476&action=review
> > > Source/WebCore/ChangeLog:9 > > + Test: pointer-lock/lock-lost-on-navigation.html > > This test does not cover the code change since it does not enable PageCache. > Not that PageCache is disabled by default in layout tests unless explicitly > enabled via: > testRunner.overridePreference("WebKitUsesPageCachePreferenceKey", 1);
s/Not/Note
Chris Dumez
Comment 10
2017-02-22 22:02:27 PST
Comment on
attachment 296476
[details]
Patch for landing. View in context:
https://bugs.webkit.org/attachment.cgi?id=296476&action=review
> Source/WebCore/testing/Internals.idl:487 > + [Conditional=POINTER_LOCK] boolean pageHasPendingPointerLock();
nit: This would have probably been nicer as an enum attribute instead of 2 separate operations, e.g.: enum PointerLockState { "inactive", "pending", "active"); readonly PointerLockState pagePointerLockState;
Chris Dumez
Comment 11
2017-02-23 13:24:28 PST
Test needs fixing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug